[package]
name = "rusty_betch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity-slash-decode = "0.1.2"
serenity = { version = "0.10.9", default-features=false, features=["unstable_discord_api", "client", "gateway", "rustls_backend", "builder", "model"] }
tokio = { version = "1.9.0", features=["rt-multi-thread"] }